# code-looper

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md
.claude/: RALPH-LOOP.md  ralph-loop.sh  settings.json
.claude/skills/github-issues/: SKILL.md
.claude/skills/github-issues/references/: bug_report.md  feature_request.md  task.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: PRD.md  README.md  configuration.md  getting-started.md  orchestration.md  providers.md  troubleshooting.md  workspace-prerequisites.md
docs/ADRs/: ADR-001-mcp-only-github-mutations.md  ADR-002-provider-adapter-trait.md  ADR-003-pluggable-policy-engine.md  ADR-004-branch-lifecycle-manager.md
src/: bootstrap.rs  branch.rs  cli.rs  config.rs  error.rs  issue_tracker.rs  loop_engine.rs  main.rs  multi_repo.rs  orchestration.rs  policy_guard.rs  pr_manager.rs  pr_strategy.rs  provider.rs  security.rs  service.rs  telemetry.rs  workspace.rs
